Make `status-bubble` visible on new bugzilla redesign
https://bugs.webkit.org/show_bug.cgi?id=283856
rdar://140732873

Reviewed by Alan Baradlay.

Currently, the last row status bubbles remain hidden in container and are not
clickable and viewable by developers using bugzilla setup for patches.
This patch is to make `max-width` bigger to enable all bubbles to fit plus with
some room for any future ones (e.g., playstation).

* Websites/bugs.webkit.org/skins/custom/global.css:
(.attachment-controls .statusBubble iframe):

Canonical link: https://commits.webkit.org/287183@main

--- a/Websites/bugs.webkit.org/skins/custom/global.css
+++ b/Websites/bugs.webkit.org/skins/custom/global.css
@@ -2219,7 +2219,7 @@ form .field-container {
     max-width: 50%;
 }
 .attachment-controls .statusBubble iframe {
-    max-width: 50rem;
+    max-width: 75rem;
     min-height: 10rem;
     border: none;
 }
